# copier

./: .gitignore  CMakeLists.txt  format.sh  main.cpp  random_file  test.sh
include/: app.hpp  chunk.hpp  circular_buffer.hpp  metrics.hpp
src/: app.cpp  chunk.cpp  metrics.cpp
tests/: chunk_tests.cpp  circular_buffer_tests.cpp
